[gd_scene load_steps=24 format=3 uid="uid://bjq0sqaiy3iw6"]

[ext_resource type="Script" path="res://plank_instancier.gd" id="1_5ucvm"]
[ext_resource type="Script" path="res://camera2d.gd" id="2_3cykm"]
[ext_resource type="Script" path="res://RandomColor.gd" id="2_tsf3v"]
[ext_resource type="AudioStream" uid="uid://c8l8kgw4nly5v" path="res://Build.wav" id="3_e2pma"]
[ext_resource type="AudioStream" uid="uid://wxj7l0th8rfe" path="res://Place.wav" id="4_7auc5"]
[ext_resource type="AudioStream" uid="uid://dgf65wnvav1xp" path="res://CskiosPost.wav" id="5_6hj4a"]
[ext_resource type="AudioStream" uid="uid://cx5ohbiadroe1" path="res://End.wav" id="7_b0ak6"]
[ext_resource type="Script" path="res://height_checker.gd" id="8_7u267"]
[ext_resource type="Texture2D" uid="uid://7bia8hv4u8wd" path="res://Plank.png" id="8_jpnik"]
[ext_resource type="Script" path="res://sprite_2d.gd" id="9_a6k2m"]

[sub_resource type="Gradient" id="Gradient_vie4g"]
offsets = PackedFloat32Array(0, 0.761905, 1)
colors = PackedColorArray(0.205034, 0.692225, 1, 1, 0.639173, 0.872145, 0.999621, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_dequn"]
gradient = SubResource("Gradient_vie4g")
fill_to = Vector2(0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ujenm"]
size = Vector2(1080, 1920)

[sub_resource type="LabelSettings" id="LabelSettings_yg0s3"]
font_size = 200

[sub_resource type="LabelSettings" id="LabelSettings_6cjcb"]
font_size = 56

[sub_resource type="CircleShape2D" id="CircleShape2D_5af5n"]
radius = 100.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gq8qs"]
size = Vector2(1080, 70)

[sub_resource type="LabelSettings" id="LabelSettings_uyvyd"]
font_size = 150

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_51ncm"]
absorbent = true

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3cfa3"]
size = Vector2(1, 60)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_68xb0"]
size = Vector2(10000, 100)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p5nww"]
size = Vector2(1080, 60)

[sub_resource type="BoxMesh" id="BoxMesh_1gwn1"]
size = Vector3(1080, 60, 1)

[node name="Node2D" type="Node2D"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1080.0
offset_bottom = 1920.0

[node name="CanvasLayer" type="CanvasLayer" parent="Control"]
layer = -1

[node name="TextureRect" type="TextureRect" parent="Control/CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_dequn")

[node name="TouchScreenButton" type="TouchScreenButton" parent="Control/CanvasLayer"]
position = Vector2(540, 960)
shape = SubResource("RectangleShape2D_ujenm")
action = "lmb"

[node name="ColorRect" type="ColorRect" parent="Control"]
z_index = 10
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -540.0
offset_top = -70.0
offset_right = 540.0
offset_bottom = 65466.0
grow_horizontal = 2
grow_vertical = 0
color = Color(1, 0.948159, 0.829019, 1)

[node name="Label" type="Label" parent="Control"]
modulate = Color(1, 0.4, 0.4, 1)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -298.5
offset_top = 250.0
offset_right = 298.5
offset_bottom = 523.0
grow_horizontal = 2
text = "Edifis"
label_settings = SubResource("LabelSettings_yg0s3")
horizontal_alignment = 1
uppercase = true
script = ExtResource("2_tsf3v")

[node name="Label" type="Label" parent="Control/Label"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -298.5
offset_top = 250.0
offset_right = 298.5
offset_bottom = 523.0
grow_horizontal = 2
text = "Build from base to start"
label_settings = SubResource("LabelSettings_6cjcb")
horizontal_alignment = 1
uppercase = true

[node name="PlankInstancier" type="Node2D" parent="."]
process_mode = 1
script = ExtResource("1_5ucvm")

[node name="Line2D" type="Line2D" parent="PlankInstancier"]
points = PackedVector2Array(0, 0, 0, 0)
default_color = Color(1, 1, 1, 0.498039)
begin_cap_mode = 2
end_cap_mode = 2

[node name="Cursor" type="ShapeCast2D" parent="PlankInstancier"]
position = Vector2(916, 1823)
shape = SubResource("CircleShape2D_5af5n")
target_position = Vector2(0, 0)
collision_mask = 2

[node name="Build" type="AudioStreamPlayer" parent="PlankInstancier"]
stream = ExtResource("3_e2pma")
volume_db = -80.0

[node name="Place" type="AudioStreamPlayer" parent="PlankInstancier"]
stream = ExtResource("4_7auc5")
volume_db = -80.0

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2(135, 1885)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2(405, 0)
shape = SubResource("RectangleShape2D_gq8qs")

[node name="Camera2D" type="Camera2D" parent="."]
process_mode = 3
position = Vector2(540, 1200)
position_smoothing_enabled = true
script = ExtResource("2_3cykm")

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]

[node name="GameOver" type="Label" parent="Camera2D/CanvasLayer"]
process_mode = 3
visible = false
z_index = 100
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -298.0
offset_top = 250.0
offset_right = 299.0
offset_bottom = 799.0
grow_horizontal = 2
text = "Game
Over"
label_settings = SubResource("LabelSettings_yg0s3")
horizontal_alignment = 1
uppercase = true

[node name="Label" type="Label" parent="Camera2D/CanvasLayer/GameOver"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -298.0
offset_top = 523.0
offset_right = 299.0
offset_bottom = 796.0
grow_horizontal = 2
text = "Press to retry"
label_settings = SubResource("LabelSettings_6cjcb")
horizontal_alignment = 1
uppercase = true

[node name="Score" type="Label" parent="Camera2D/CanvasLayer"]
process_mode = 3
visible = false
z_index = 100
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -298.0
offset_right = 299.0
offset_bottom = 549.0
grow_horizontal = 2
label_settings = SubResource("LabelSettings_uyvyd")
horizontal_alignment = 1
uppercase = true

[node name="End" type="AudioStreamPlayer" parent="Camera2D"]
process_mode = 3
stream = ExtResource("7_b0ak6")
volume_db = -80.0

[node name="Music" type="AudioStreamPlayer" parent="Camera2D"]
stream = ExtResource("5_6hj4a")
volume_db = -80.0

[node name="Base" type="RigidBody2D" parent="."]
process_mode = 1
position = Vector2(540, 1820)
scale = Vector2(1000, 1)
collision_layer = 3
collision_mask = 3
mass = 2.0
physics_material_override = SubResource("PhysicsMaterial_51ncm")

[node name="Sprite2D" type="Sprite2D" parent="Base"]
texture_filter = 1
texture_repeat = 2
scale = Vector2(0.017, 1)
texture = ExtResource("8_jpnik")
region_enabled = true
region_rect = Rect2(0, 0, 60, 60)
script = ExtResource("9_a6k2m")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Base"]
shape = SubResource("RectangleShape2D_3cfa3")

[node name="End" type="Area2D" parent="."]
position = Vector2(540, 1970)

[node name="CollisionShape2D" type="CollisionShape2D" parent="End"]
shape = SubResource("RectangleShape2D_68xb0")

[node name="HeightChecker" type="ShapeCast2D" parent="."]
process_mode = 3
position = Vector2(540, 1760)
shape = SubResource("RectangleShape2D_p5nww")
target_position = Vector2(0, 0)
script = ExtResource("8_7u267")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="HeightChecker"]

[node name="MeshInstance2D" type="MeshInstance2D" parent="HeightChecker"]
visible = false
modulate = Color(1, 0, 1, 1)
mesh = SubResource("BoxMesh_1gwn1")

[connection signal="body_entered" from="End" to="Camera2D" method="_on_end_body_entered"]
[connection signal="screen_exited" from="HeightChecker/VisibleOnScreenNotifier2D" to="Camera2D" method="_on_visible_on_screen_notifier_2d_screen_exited"]
